# homer_map_manager

./: CHANGELOG.rst  CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml
include/homer_map_manager/: map_manager_node.h
include/homer_map_manager/Managers/: MapManager.h  MaskingManager.h  PoiManager.h  RoiManager.h
include/homer_map_manager/MapIO/: image_loader.h  map_loader.h  map_saver.h
include/homer_map_manager/Workers/PointOfInterest/: PointOfInterest.h
src/: map_manager_node.cpp  poi_visualization.cpp
src/Managers/: MapManager.cpp  MaskingManager.cpp  PoiManager.cpp  RoiManager.cpp
src/MapIO/: image_loader.cpp  map_loader.cpp  map_saver.cpp
src/Workers/PointOfInterest/: CMakeLists.txt
