<package>
  <name>homer_map_manager</name>
  <version>1.0.0</version>
  <description>
     map_manager
  </description>
  <maintainer email="vseib@uni-koblenz.de">Viktor Seib</maintainer>
  <author email="mknauf@uni-koblenz.de">Malte Knauf</author>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>homer_mapnav_msgs</build_depend>
  <build_depend>homer_nav_libs</build_depend>
  <build_depend>homer_tools</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>homer_mapnav_msgs</run_depend>
  <run_depend>homer_nav_libs</run_depend>
  <run_depend>homer_tools</run_depend>

</package>


